main title left align fix

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -68,9 +68,6 @@
             margin: auto;
             width: 600px;
 
-            .header {
-                margin: 0 20px;
-            }
         }
 
         .colRight {
@@ -97,6 +94,7 @@
 
             .header {
                 font-size: 46px;
+                margin: 0 20px;
                 text-align: center;
             }
 
